<resources>
    <string name="app_name">jmart-android</string>
    <string name="hello_user">Hello User!</string>
    <string name="name">Name</string>
    <string name="emailreg">Email</string>
    <string name="register">REGISTER</string>
    <string name="passwordreg">Password</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="register_now">Register Now!</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="shipmentPlans">
        <item>INSTANT</item>
        <item>SAME DAY</item>
        <item>NEXT DAY</item>
        <item>REGULER</item>
        <item>KARGO</item>
    </string-array>

    <string-array name="productCategory">
        <item>BOOK</item>
        <item>KITCHEN</item>
        <item>ELECTRONIC</item>
        <item>FASHION</item>
        <item>GAMING</item>
        <item>GADGET</item>
        <item>MOTHERCARE</item>
        <item>COSMETICS</item>
        <item>HEALTHCARE</item>
        <item>FURNITURE</item>
        <item>JEWELRY</item>
        <item>TOYS</item>
        <item>FNB</item>
        <item>STATIONERY</item>
        <item>SPORTS</item>
        <item>AUTOMOTIVE</item>
        <item>PETCARE</item>
        <item>ART_CRAFT</item>
        <item>CARPENTRY</item>
        <item>MISCELLANEOUS</item>
        <item>PROPERTY</item>
        <item>TRAVEL</item>
        <item>WEDDING</item>
    </string-array>

</resources>